# gir-parser

./: Cargo.toml  README.md  typos.toml  update_gir_files.sh
.github/workflows/: CI.yml  docs.yml  typos.yml
gir-files/: Adw-1.gir  AppStream-1.0.gir  AppStreamCompose-1.0.gir  Atk-1.0.gir  Atspi-2.0.gir  Dex-1.gir  GCab-1.0.gir  GDesktopEnums-3.0.gir  GIRepository-2.0.gir  GIRepository-3.0.gir  GLib-2.0.gir  GLibUnix-2.0.gir  GModule-2.0.gir  GObject-2.0.gir  Gck-2.gir  Gcr-3.gir  Gcr-4.gir  Gdk-4.0.gir  GdkPixdata-2.0.gir  GdkWayland-4.0.gir  GdkX11-3.0.gir  GdkX11-4.0.gir  Gee-0.8.gir  GioUnix-2.0.gir  Gly-2.gir  GlyGtk4-2.gir  Gsk-4.0.gir  Gst-1.0.gir  GstAnalytics-1.0.gir  GstApp-1.0.gir  GstAudio-1.0.gir  GstBase-1.0.gir  GstCodecs-1.0.gir  GstController-1.0.gir  GstCuda-1.0.gir  GstGL-1.0.gir  GstGLEGL-1.0.gir  GstMpegts-1.0.gir  GstMse-1.0.gir  GstNet-1.0.gir  (+32 more)
src/: alias.rs  array.rs  attribute.rs  bitfield.rs  boxed.rs  callable.rs  callback.rs  class.rs  constant.rs  documentation.rs  enums.rs  field.rs  function.rs  function_macro.rs  interface.rs  lib.rs  member.rs  method.rs  namespace.rs  parameter.rs  property.rs  record.rs  repository.rs  return_value.rs  signal.rs  traits.rs  type.rs  union.rs  version.rs  virtual_method.rs
