[package]
name = "gir-parser"
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/bilelmoussaoui/gir-parser"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
exclude = ["gir-files", "gir-1.2.rnc", "update_gir_files.sh"]
description = "GObject Introspection GIR files parser"
keywords = ["gir", "gobject", "introspection", "parser", "xml"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
xmlserde = "0.12"
xmlserde_derives = "0.12"

[[bin]]
name = "playground"
path = "bin/playground.rs"
